# learn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  module.cmake  qtconfig.cmake  vs-build-sln.bat  vs-start-sln.bat
d3dwindows/: CMakeLists.txt  global.h  main.cpp
d3dwindows/d3dcore/: d3ddef.h  errtrace.cpp  errtrace.h  graphics.cpp  graphics.h
d3dwindows/d3dcore/bindable/: constantbuffer.h  ibindable.cpp  ibindable.h  indexbuffer.cpp  indexbuffer.h  inputlayout.cpp  inputlayout.h  ishader.cpp  ishader.h  pixelshader.cpp  pixelshader.h  topology.cpp  topology.h  transformcbuffer.cpp  transformcbuffer.h  vertexbuffer.cpp  vertexbuffer.h  vertexshader.cpp  vertexshader.h
d3dwindows/d3dcore/drawable/: idrawable.cpp  idrawable.h
d3dwindows/objects/: triangle.cpp  triangle.h
d3dwindows/shader/: vertexshader.hlsl
d3dwindows/ui/: d3d11widget.cpp  d3d11widget.h
d3dwindows/utils/: common.cpp  common.h
ffmpeg/: CMakeLists.txt  main.cpp
